[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alertforge"
version = "0.1.0"
description = "Outcome-aware follow-up prioritization for LSST alert streams"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "pip-audit>=2.7",
    "types-PyYAML>=6.0",
]
web = []
ml = [
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alertforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/alertforge --cov-report=term-missing -q"
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["alertforge"]
mypy_path = "src"
